landing page functionality

--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>CD Graphics</title>
-
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
-
+  <link rel="stylesheet" type="text/css" href="./css/setup.css">
+  <link rel="stylesheet" type="text/css" href="./css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="./css/landing-page.css">
+  <link rel="stylesheet" type="text/css" href="./css/portfolio-page.css">
+  <link rel="stylesheet" type="text/css" href="./css/contact-page.css">
 </head>
 
 <body>
-  
+  <div id="navbar">
+    <a href="#landing-page" class="nav-item"><img src="https://picsum.photos/150/80" /></a>
+    <div>
+      <!-- <a href="#explore-page" class="nav-item nav-text">Explore</a>
+      <a href="#about-page" class="nav-item nav-text">About</a> -->
+      <a href="#portfolio-page" class="nav-item nav-text">Portfolio</a>
+      <a href="#contact-page" class="nav-item nav-text">Contact</a>
+    </div>
+  </div>
+
+  <div id="landing-page" class="page">
+    <div id="landing-heading-container">
+      <div id="landing-background-image"></div>
+      <h1 id="landing-heading">Crishan Dalvair</h1>
+      <span id="landing-break"></span>
+    </div>
+    <h2 id="landing-subheading">Graphic Designer</h2>
+    <a id="landing-arrow-container" href="#portfolio-page" class="nav-item">
+      <img id="landing-arrow" src="https://picsum.photos/60/200" />
+    </a>
+  </div>
+
+  <!-- <div id="explore-page" class="page"></div> -->
+
+  <!-- <div id="about-page" class="page"></div> -->
+
+  <div id="portfolio-page" class="page">
+
+  </div>
+
+  <div id="contact-page" class="page">
+
+  </div>
 </body>
 </html>
