--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
   <!-- <div id="about-page" class="page"></div> -->
 
   <div id="portfolio-page" class="page">
-
-  </div>
-
-  <div id="contact-page" class="page">
+      <h2 id="portfolio-heading" class="page-heading">Portfolio</h2>
+      <div class="portfolio-grid-item-container">
+        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
+        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
+      </div>
+      <div class="portfolio-grid-item-container">
+        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
+        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
+      </div>
+    </div>
+    
+    <div id="contact-page" class="page">
+        <h2 id="contact-heading" class="page-heading">Contact Me</h2>
 
   </div>
 </body>
