--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>CD Graphics</title>
-  <link rel="stylesheet" type="text/css" href="./css/setup.css">
-  <link rel="stylesheet" type="text/css" href="./css/navbar.css">
-  <link rel="stylesheet" type="text/css" href="./css/landing-page.css">
-  <link rel="stylesheet" type="text/css" href="./css/portfolio-page.css">
-  <link rel="stylesheet" type="text/css" href="./css/contact-page.css">
+  <link rel="shortcut icon" type="image/png" href="content/favicon.ico"/>
+  <link rel="stylesheet" type="text/css" href="css/setup.css">
+  <link rel="stylesheet" type="text/css" href="css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="css/landing-page.css">
+  <link rel="stylesheet" type="text/css" href="css/portfolio-page.css">
+  <link rel="stylesheet" type="text/css" href="css/contact-page.css">
 </head>
 
 <body>
   <div id="navbar">
-    <a href="#landing-page" class="nav-item"><img src="https://picsum.photos/150/80" /></a>
+    <a href="#landing-page" class="nav-item nav-logo"><img src="content/cd_graphics_logo.jpg" /></a>
     <div>
       <!-- <a href="#explore-page" class="nav-item nav-text">Explore</a>
       <a href="#about-page" class="nav-item nav-text">About</a> -->
@@ -41,12 +42,12 @@
   <div id="portfolio-page" class="page">
       <h2 id="portfolio-heading" class="page-heading">Portfolio</h2>
       <div class="portfolio-grid-item-container">
-        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
-        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
+        <div class="portfolio-grid-item" style="background-image: url('content/the_abbey_card_front.jpg');"></div>
+        <div class="portfolio-grid-item" style="background-image: url('content/good_logo.jpg');"></div>
       </div>
       <div class="portfolio-grid-item-container">
-        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
-        <div class="portfolio-grid-item" style="background-image: url('https://picsum.photos/300/120');"></div>
+        <div class="portfolio-grid-item" style="background-image: url('content/business_card_front.jpg');"></div>
+        <div class="portfolio-grid-item" style="background-image: url('content/books_to_the_future_logo.jpg');"></div>
       </div>
     </div>
     
