fixing landing page link breaking URL

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div id="navbar">
-    <a href="#landing-page" class="nav-item nav-logo"><img src="content/cd_graphics_logo.jpg" /></a>
+    <a href="" class="nav-item nav-logo"><img src="content/cd_graphics_logo.jpg" /></a>
     <div>
       <!-- <a href="#explore-page" class="nav-item nav-text">Explore</a>
       <a href="#about-page" class="nav-item nav-text">About</a> -->
