--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>CD Graphics</title>
   <link rel="shortcut icon" type="image/png" href="content/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="css/setup.css">
