adding illustration on contact page

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </div>
     
     <div id="contact-page" class="page">
-        <h2 id="contact-heading" class="page-heading">Contact Me</h2>
-
-        <div id="contact-flex-outer-container">
-          <img src="https://picsum.photos/380/500" />
+      <h2 id="contact-heading" class="page-heading">Contact Me</h2>
+      
+      <div id="contact-flex-outer-container">
+          <div id="contact-illustration" style="background-image: url('content/crishan_illustration.png');"></div>
           <div id="contact-flex-form-container">
             <h3>Let&apos;s work together!</h3>
             <p>Please get in touch if you&apos;d like more information; I am available 7 days a week. I love design and working with people to solve their design problems.</p>
