adding new pages in portfolio

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
   <div id="navbar">
     <a href="" class="nav-item nav-logo"><img src="content/cd_graphics_logo.png" /></a>
     <div id="desktop-menu">
-      <!-- <a href="#explore-page" class="nav-item nav-text">Explore</a> -->
-      <!-- <a href="#about-page" class="nav-item nav-text">About</a> -->
       <a href="#portfolio-page" class="nav-item nav-text">Portfolio</a>
       <a href="#contact-page" class="nav-item nav-text">Contact</a>
     </div>
@@ -28,14 +26,12 @@
       <i class="fa fa-bars"></i>
     </a>
     <div id="hamburger-menu" style="display: none;">
-      <!-- <a href="#explore-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Explore</a> -->
-      <!-- <a href="#about-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">About</a> -->
       <a href="#portfolio-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Portfolio</a>
       <a href="#contact-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Contact</a>
     </div>
   </div>
 
-  <div id="landing-page" class="page">
+  <div id="landing-page" class="page first-page">
     <div id="landing-heading-container">
       <div id="landing-background-image"></div>
       <h1 id="landing-heading">Crishan Dalvair</h1>
@@ -47,19 +43,15 @@
     </a>
   </div>
 
-  <!-- <div id="explore-page" class="page"></div> -->
-
-  <!-- <div id="about-page" class="page"></div> -->
-
   <div id="portfolio-page" class="page">
     <h2 id="portfolio-heading" class="page-heading">Portfolio</h2>
     <div class="portfolio-grid-item-container">
-      <div class="portfolio-grid-item" style="background-image: url('content/the_abbey_card_front.png');"></div>
-      <div class="portfolio-grid-item" style="background-image: url('content/good_logo.png');"></div>
+      <a href="portfolio/the-abbey.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/the_abbey_card_front.png');"></a>
+      <a href="portfolio/good.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/good_logo.png');"></a>
     </div>
     <div class="portfolio-grid-item-container">
-      <div class="portfolio-grid-item" style="background-image: url('content/business_card_front.png');"></div>
-      <div class="portfolio-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></div>
+      <a href="portfolio/cd-graphics.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/business_card_front.png');"></a>
+      <a href="portfolio/books-to-the-future.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></a>
     </div>
   </div>
     
