adding project page content

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   <div id="portfolio-page" class="page">
     <h2 id="portfolio-heading" class="page-heading">Portfolio</h2>
     <div class="portfolio-grid-item-container">
-      <a href="portfolio/the-abbey.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/the_abbey_card_front.png');"></a>
-      <a href="portfolio/good.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/good_logo.png');"></a>
+      <a href="projects/the-abbey.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/the_abbey_card_front.png');"></a>
+      <a href="projects/good.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/good_logo.png');"></a>
     </div>
     <div class="portfolio-grid-item-container">
-      <a href="portfolio/cd-graphics.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/business_card_front.png');"></a>
-      <a href="portfolio/books-to-the-future.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></a>
+      <a href="projects/cd-graphics.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/business_card_front.png');"></a>
+      <a href="projects/books-to-the-future.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></a>
     </div>
   </div>
     
