changing portfolio to projects

--- a/projects/books-to-the-future.html
+++ b/projects/books-to-the-future.html
@@ -17,14 +17,14 @@
   <div id="navbar">
     <a href="../index.html" class="nav-item nav-logo"><img src="../content/cd_graphics_logo.png" /></a>
     <div id="desktop-menu">
-      <a href="../index.html#portfolio-page" class="nav-item nav-text">Portfolio</a>
+      <a href="../index.html#projects-page" class="nav-item nav-text">Projects</a>
       <a href="../index.html#contact-page" class="nav-item nav-text">Contact</a>
     </div>
     <a href="javascript:void(0);" id="hamburger-icon" onclick="toggleHamburgerMenu()">
       <i class="fa fa-bars"></i>
     </a>
     <div id="hamburger-menu" style="display: none;">
-      <a href="../index.html#portfolio-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Portfolio</a>
+      <a href="../index.html#projects-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Projects</a>
       <a href="../index.html#contact-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Contact</a>
     </div>
   </div>
