--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/setup.css">
   <link rel="stylesheet" type="text/css" href="css/navbar.css">
   <link rel="stylesheet" type="text/css" href="css/landing-page.css">
-  <link rel="stylesheet" type="text/css" href="css/portfolio-page.css">
+  <link rel="stylesheet" type="text/css" href="css/projects-page.css">
   <link rel="stylesheet" type="text/css" href="css/contact-page.css">
   <script type="text/javascript" src="js/hamburger-menu.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,14 +19,14 @@
   <div id="navbar">
     <a href="" class="nav-item nav-logo"><img src="content/cd_graphics_logo.png" /></a>
     <div id="desktop-menu">
-      <a href="#portfolio-page" class="nav-item nav-text">Portfolio</a>
+      <a href="#projects-page" class="nav-item nav-text">Projects</a>
       <a href="#contact-page" class="nav-item nav-text">Contact</a>
     </div>
     <a href="javascript:void(0);" id="hamburger-icon" onclick="toggleHamburgerMenu()">
       <i class="fa fa-bars"></i>
     </a>
     <div id="hamburger-menu" style="display: none;">
-      <a href="#portfolio-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Portfolio</a>
+      <a href="#projects-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Projects</a>
       <a href="#contact-page" class="nav-item nav-text" onclick="toggleHamburgerMenu()">Contact</a>
     </div>
   </div>
@@ -38,20 +38,20 @@
       <span id="landing-break"></span>
     </div>
     <h2 id="landing-subheading">Graphic Designer</h2>
-    <a id="landing-arrow-container" href="#portfolio-page" class="nav-item">
+    <a id="landing-arrow-container" href="#projects-page" class="nav-item">
       <img id="landing-arrow" src="content/arrow.png" />
     </a>
   </div>
 
-  <div id="portfolio-page" class="page">
-    <h2 id="portfolio-heading" class="page-heading">Portfolio</h2>
-    <div class="portfolio-grid-item-container">
-      <a href="projects/the-abbey.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/the_abbey_card_front.png');"></a>
-      <a href="projects/good.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/good_logo.png');"></a>
+  <div id="projects-page" class="page">
+    <h2 id="projects-heading" class="page-heading">Projects</h2>
+    <div class="projects-grid-item-container">
+      <a href="projects/the-abbey.html" target="_self" class="projects-grid-item" style="background-image: url('content/the_abbey_card_front.png');"></a>
+      <a href="projects/good.html" target="_self" class="projects-grid-item" style="background-image: url('content/good_logo.png');"></a>
     </div>
-    <div class="portfolio-grid-item-container">
-      <a href="projects/cd-graphics.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/business_card_front.png');"></a>
-      <a href="projects/books-to-the-future.html" target="_self" class="portfolio-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></a>
+    <div class="projects-grid-item-container">
+      <a href="projects/cd-graphics.html" target="_self" class="projects-grid-item" style="background-image: url('content/business_card_front.png');"></a>
+      <a href="projects/books-to-the-future.html" target="_self" class="projects-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></a>
     </div>
   </div>
     
