--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="projects/good.html" target="_self" class="projects-grid-item" style="background-image: url('content/good_logo.png');"></a>
     </div>
     <div class="projects-grid-item-container">
-      <a href="projects/cd-graphics.html" target="_self" class="projects-grid-item" style="background-image: url('content/business_card_front.png');"></a>
+      <a href="projects/personal-promotion.html" target="_self" class="projects-grid-item" style="background-image: url('content/business_card_front.png');"></a>
       <a href="projects/books-to-the-future.html" target="_self" class="projects-grid-item" style="background-image: url('content/books_to_the_future_logo.png');"></a>
     </div>
   </div>
